# Intersection_of_triangles

./: .gitignore  CMakeLists.txt  README.md  main.cpp  triangles.cpp  triangles.hpp
include/: app.hpp  camera.hpp  command_buffer.hpp  descriptor.hpp  device.hpp  header.hpp  input.hpp  intersect.hpp  line.hpp  model.hpp  octree.hpp  pipeline.hpp  plane.hpp  segment.hpp  swap_chain.hpp  triangle.hpp  uniform_buffer.hpp  vector.hpp  window.hpp
shaders/: compile.sh  shader.frag  shader.vert
src/: app.cpp  camera.cpp  command_buffer.cpp  descriptor.cpp  device.cpp  input.cpp  intersect.cpp  line.cpp  model.cpp  octree.cpp  pipeline.cpp  plane.cpp  segment.cpp  swap_chain.cpp  triangle.cpp  uniform_buffer.cpp  vector.cpp  vulkan.cpp  window.cpp
test/: CMakeLists.txt  check_octree.txt  gtest.cpp  mini_test.txt  point_and_point.txt  segment_and_point.txt  segment_and_segment.txt  text.txt  triangle_and_segment.txt  triangle_and_triangle.txt
